force-app/main/default/objects/ms_ci__ComposerFlow__x/ms_ci__ComposerFlow__x.object-meta.xml
<CustomObject>
    <description>This objects contains information about flow created in MuleSoft&apos;s Composer</description>
    <externalDataSource>ms_ci__mulesoft_composer_externalDataSource</externalDataSource>
    <externalName>ComposerFlows</externalName>
    <label>Composer Flow</label>
    <pluralLabel>Composer Flows</pluralLabel>
</CustomObject>