force-app/main/default/objects/ms_ci__ComposerFlow__x/fields/ms_ci__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>ms_ci__Flow_Name__c</fullName>
    <description>Flow_Name</description>
    <externalDeveloperName>Flow_Name</externalDeveloperName>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>