force-app/main/default/objects/ms_ci__ComposerFlow__x/fields/ms_ci__Flow_Owner__c.field-meta.xml
<CustomField>
    <fullName>ms_ci__Flow_Owner__c</fullName>
    <description>Flow_Owner</description>
    <externalDeveloperName>Flow_Owner</externalDeveloperName>
    <label>Flow Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>