force-app/main/default/objects/ms_ci__ComposerFlow__x/fields/ms_ci__Flow_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>ms_ci__Flow_Owner_Id__c</fullName>
    <description>Flow_Owner_Id</description>
    <externalDeveloperName>Flow_Owner_Id</externalDeveloperName>
    <label>Flow Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>