force-app/main/default/objects/ms_ci__ComposerFlow__x/fields/ms_ci__Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>ms_ci__Last_Modified_Date__c</fullName>
    <description>Last_Modified_Date</description>
    <externalDeveloperName>Last_Modified_Date</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>