force-app/main/default/objects/ms_ci__ComposerFlow__x/fields/ms_ci__Status__c.field-meta.xml
<CustomField>
    <fullName>ms_ci__Status__c</fullName>
    <description>Status</description>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>