force-app/main/default/objects/ms_ci__ComposerFlow__x/listViews/ms_ci__All.listView-meta.xml
<ListView>
    <fullName>ms_ci__All</fullName>
    <columns>ms_ci__Flow_Name__c</columns>
    <columns>ms_ci__Status__c</columns>
    <columns>ms_ci__Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>